[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Lennon Cook", email = "lvc@codetripping.net"},
]
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "advent-of-code-data",
    "more-itertools",
    "parse",
    "numpy~=1.21",
    "networkx>=2.8.8",
    "setuptools>=65.6.3",
]
name = "advent of python"
description = "My solutions to Advent of Code 2023, in python"
license="MIT"#{file= "COPYING"}

[tool]
[tool.pdm]
